Fix Bug 1111872 - Firefox screenshot is not centered on /firefox/new/

--- a/media/css/firefox/new.less
+++ b/media/css/firefox/new.less
@@ -448,11 +448,13 @@ html[lang|="en"] #main-feature h1.large span:first-child {
 }
 
 #firefox-screenshot {
-    padding: 0 20px;
+    position: absolute;
+    right: 20px;
+    left: 20px;
+    bottom: 0;
+    text-align: center;
     .platform-img {
-        position: absolute;
-        bottom: 0;
-        left: 0;
+        vertical-align: bottom;
     }
 }
 
